fixed register page on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,12 +53,11 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  overflow: hidden !important;
 }
 .registration form {
   background-color: #121212 !important;
   min-height: 100vh;
+  overflow: hidden !important;
 }
 .registration form .register-header {
   font-family: Plus Jakarta Sans XBold, sans-serif;
@@ -125,61 +124,35 @@
   background-color: #1D1D1D !important;
 }
 
-.profile-card, .posts {
+.profile-card {
   border-radius: 21px !important;
   background-color: #1D1D1D !important;
-  width: 25rem !important;
+  max-width: 25rem !important;
   position: sticky !important;
   top: 2rem !important;
 }
-.profile-card .profile-img, .posts .profile-img {
+.profile-card .profile-img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background-color: #D9D9D9;
 }
-.profile-card .profile-name, .posts .profile-name {
+.profile-card .profile-name {
   font-family: Plus Jakarta Sans Bold, sans-serif;
   font-size: 35px;
 }
-.profile-card .btn-view-post, .posts .btn-view-post {
+.profile-card .btn-view-post {
   background-color: #ff5e15;
   font-family: Plus Jakarta Sans Bold, sans-serif;
 }
-.profile-card .btn-view-post:hover, .posts .btn-view-post:hover {
+.profile-card .btn-view-post:hover {
   background-color: #ff5e15;
   font-family: Plus Jakarta Sans Bold, sans-serif;
 }
-.profile-card .btn-view-post:active, .posts .btn-view-post:active {
+.profile-card .btn-view-post:active {
   background-color: #ff5e15 !important;
   border: none !important;
   font-family: Plus Jakarta Sans Bold, sans-serif;
-}
-
-.posts {
-  position: static !important;
-  top: 0 !important;
-  width: 100% !important;
-}
-.posts .profile-img-posts {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: #D9D9D9;
-}
-.posts .btn-comment {
-  background-color: #393939 !important;
-}
-.posts .btn-post {
-  background-color: #ff5e15;
-  bottom: 0;
-}
-.posts .btn-post:hover {
-  background-color: #ff5e15;
-}
-.posts .btn-post:active {
-  background-color: #ff5e15 !important;
-  border: none !important;
 }
 
 textarea {
@@ -288,13 +261,40 @@ body {
   width: 100% !important;
   position: static !important;
   top: 0 !important;
-  width: 100% !important;
 }
 .create-posts .profile-img-posts {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   background-color: #D9D9D9;
+}
+
+.posts {
+  border-radius: 21px !important;
+  background-color: #1D1D1D !important;
+  position: static !important;
+  top: 0 !important;
+  width: 100% !important;
+}
+.posts .profile-img-posts {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+}
+.posts .btn-comment {
+  background-color: #393939 !important;
+}
+.posts .btn-post {
+  background-color: #ff5e15;
+  bottom: 0;
+}
+.posts .btn-post:hover {
+  background-color: #ff5e15;
+}
+.posts .btn-post:active {
+  background-color: #ff5e15 !important;
+  border: none !important;
 }
 
 /*!
